# subdomain-takeover-scanner

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  takeover_report.html
reports/: html_report.py  pdf_report.py  terminal_report.py
scanner/: detector.py  enumerator.py  fingerprints.py
workflows/: publish.yml
